# qmt-parser

./: Cargo.toml  FINANCE.md  README.md
benches/: tick_benchmark.rs
benches/common/: tick_analysis.rs
docs/superpowers/plans/: 2026-03-27-tick-benchmark-implementation.md
docs/superpowers/specs/: 2026-03-27-tick-benchmark-design.md
script/: __init__.py  day.py  min.py  tick.py
src/: datadir.rs  day.rs  dividend.rs  error.rs  finance.rs  lib.rs  metadata.rs  min.rs  tick.rs
tests/: datadir.rs  metadata.rs  tick_benchmark_equivalence.rs
