[package]
name = "qmt-parser"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
polars = { version = "0.52", features = ["lazy", "timezones"] }
byteorder = "1.5"
thiserror = "2"
chrono = "0.4.42"
rusty-leveldb = "1.0"