[package]
name = "qmt-parser"
version = "0.1.0"
edition = "2024"
authors = ["sunnysab <i@sunnysab.cn>"]
license = "GPL-3.0-only"
description = "Rust parser for MiniQMT/QMT local market data, finance files, and dividend metadata."
readme = "README.md"
repository = "https://github.com/sunnysab/qmt-parser"
homepage = "https://github.com/sunnysab/qmt-parser"
documentation = "https://docs.rs/qmt-parser"
keywords = ["qmt", "quant", "parser", "market-data", "polars"]
categories = ["parser-implementations", "encoding", "science"]
rust-version = "1.90"
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "src/**/*.rs",
]

[features]
default = ["polars"]
polars = ["dep:polars"]

[dependencies]
polars = { version = "0.52", features = ["lazy", "timezones"], optional = true }
byteorder = "1.5"
thiserror = "2"
chrono = "0.4.42"
rusty-leveldb = "1.0"
memmap2 = "0.9.9"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tick_benchmark"
harness = false
required-features = ["polars"]
